--- a/awsapp/template/next.html
+++ b/awsapp/template/next.html
@@ -17,30 +17,20 @@
 					<h3 id="form-title">REGISTER ACCOUNT</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
-
-					<form method="POST" action="register/">
+					<h5>Enter otp recieved for {{email}}</h5>		
+					<form method="POST" action="verifyotp/">
 						{% csrf_token %}
 						
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-							<input type="text" name="first_name">
-						</div>
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-							<input type="text" name="last_name">
-						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
 							</div>
-							<input type="text" name="email">
+                        <input type="text" name="otpverif" placeholder="Enter otp">
 						</div>
+						
+
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Next">
+				 			<input class="btn login_btn" type="submit" value="Verify OTP">
 				   		</div>
 					</form>
 				</div>
@@ -63,10 +53,9 @@
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Firstname..';
-		form_fields[2].placeholder='Lastname..';
-		form_fields[3].placeholder='Email..';
-
+		// form_fields[1].placeholder='Firstname..';
+		// form_fields[2].placeholder='Lastname..';
+		// form_fields[3].placeholder='Email..';
 
 
 		for (var field in form_fields){	
