password page added

--- a/awsapp/template/base.html
+++ b/awsapp/template/base.html
@@ -89,6 +89,15 @@
 			padding: 20px;
 			transition: all 0.5s ease;
 		}
+		.rsidebar{
+			background: rgb(5, 68, 104);
+			position: fixed;
+			top: 70px;
+			right: 0;
+			width: 225px;
+			height: 100%;
+			padding: 20px;
+		}
         .accordion-body>a:hover{
             display: block;
             background-color: #33ccff;
@@ -113,5 +122,8 @@
     <h1>Home</h1>
     <div class="right"></div>
     {% endblock %}
+	<div class="rsidebar">
+		SoftwareONE is a leading global provider of end-to-end software and cloud technology solutions, headquartered in Switzerland. With an IP and technology-driven services portfolio, it enables companies to holistically develop and implement their commercial, technology and digital transformation strategies. 
+	</div>
 </body>
 </html>
