--- a/awsapp/template/password.html
+++ b/awsapp/template/password.html
@@ -16,25 +16,25 @@
 				<div class="d-flex justify-content-center">
 					<h3 id="form-title">REGISTER ACCOUNT</h3>
 				</div>
-				<div class="d-flex flex-column justify-content-center align-items-center">
-					<h5>Enter otp recieved for:</h5>		
-					<h6>{{email}}</h6>		
-				</div>	
 				<div class="d-flex justify-content-center form_container">
-									
-					<form method="POST" action="verifyotp/">
+
+					<form method="POST" action="userRegister/">
 						{% csrf_token %}
 						
-						<div class="input-group mb-2">
+						<div class="input-group mb-3">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-                        <input type="text" name="otpverif" placeholder="Enter otp">
+							<input type="text" name="password1">
 						</div>
-						
-
+						<div class="input-group mb-3">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
+							</div>
+							<input type="text" name="password2">
+						</div>
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Verify OTP">
+				 			<input class="btn login_btn" type="submit" value="Register">
 				   		</div>
 					</form>
 				</div>
@@ -57,9 +57,9 @@
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		// form_fields[1].placeholder='Firstname..';
-		// form_fields[2].placeholder='Lastname..';
-		// form_fields[3].placeholder='Email..';
+		form_fields[1].placeholder='Enter password';
+		form_fields[2].placeholder='Confirm password';
+
 
 
 		for (var field in form_fields){	
